8304720: SuperWord::schedule should rebuild C2-graph from SuperWord dependency-graph